--- a/frontend-vite/src/assets/styles/custom.css
+++ b/frontend-vite/src/assets/styles/custom.css
@@ -71,7 +71,6 @@
   overflow-y: auto; /* Enable vertical scrollbar if content exceeds container height */
 }
 
-
 /* AUDIO PLAYER */
 /* custom.css or your CSS file */
 /* Change the background color of the audio player */
@@ -92,7 +91,7 @@
 
 /* Change the color of the play/pause button */
 .rhap_play-pause-button {
-  color: #C70000 !important; /* Replace with your desired color */
+  color: #c70000 !important; /* Replace with your desired color */
 }
 
 /* Change the color of the time display */
@@ -105,8 +104,7 @@
   color: #9c27b0; /* Replace with your desired color */
 }
 
-
-.artist-profile{
+.artist-profile {
   border-radius: 1000px;
   border: #2c2c2c solid 1px;
   box-shadow: #2c2c2c;
@@ -145,7 +143,7 @@
 
 .modal-custom-input:focus {
   border-color: #c70000 !important; /* Change to your desired color */
-  box-shadow: 0 0 0 0.2rem rgba(199, 0, 0, 0.25) !important; 
+  box-shadow: 0 0 0 0.2rem rgba(199, 0, 0, 0.25) !important;
 }
 
 .album-photo-container {
@@ -182,4 +180,63 @@
   font-size: 20px; /* Adjust as needed */
   cursor: pointer;
   opacity: 0;
+}
+
+.album-section-1 {
+  width: 75%;
+  flex-wrap: nowrap; /* Prevent wrapping in the main axis */
+  overflow-x: auto; /* Enable horizontal scrolling */
+  flex-direction: row; /* Arrange items horizontally */
+  height: 400px;
+  justify-content: flex-start; /* Align items to the start of the main axis */
+  align-items: center; /* Center items along the cross axis */
+}
+
+.album-card {
+  background-color: #2c2c2c;
+  cursor: pointer;
+  min-width: 300px; /* Set a minimum width for each card */
+  max-width: 300px; /* Set a maximum width for each card */
+  height: 90%;
+  flex-shrink: 0; /* Prevent cards from shrinking */
+  border-radius: 32px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-right: 16px; /* Add margin between cards */
+}
+
+.album-section-1::-webkit-scrollbar {
+  display: none; /* Hide the scrollbar */
+}
+
+.album-image {
+  width: 100%;
+  height: 75%;
+  object-fit: cover;
+}
+
+.album-description h3 {
+  font-weight: 700;
+}
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: -25%;
+  width: 25%;
+  height: 100%;
+  background-color: #2c2c2c;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  transition: right 0.3s ease-in-out;
+  z-index: 999;
+  overflow-y: auto;
+}
+
+.sidebar.open {
+  right: 0;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
